[package]
name = "gossip_glomers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maelstrom-node = "0.1.6"
async-trait = "0.1.68"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
ulid = "1.0.0"
